get all chat messages